--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="">
     <button class="btnDarkmode" ></button>
+    <h1>Darkmode</h1>
     <div class="Container">
         <div class="Items">
             <div class="image">
